--- a/_includes/head/analytics.html
+++ b/_includes/head/analytics.html
@@ -4,12 +4,12 @@
 <!-- Analytics --> 
 {% if site.google-analytics-id %}
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google-analytics-id }}"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-M91YZTBJM8"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-  gtag('config', '{{ site.google-analytics-id }}', {
+  gtag('config', 'G-M91YZTBJM8', {
     'anonymize_ip': true
   });
 </script>
