--- a/_layouts/search.html
+++ b/_layouts/search.html
@@ -17,7 +17,7 @@ custom-foot: js/lunr-js.html
             <div class="modal-body">
                 <p>Estas opciones avanzadas pueden añadirse a la consulta en el cuadro de búsqueda para afinar los resultados:</p> 
                 <ul>
-                    <li>Search a specific field: use the field name, colon, then your query, e.g. <code>title:foo</code>, <code>date:1911</code>, <code>subject:tree</code>. En esta colección puede utilizar {{ fields | join: ", " }}.</li>
+                    <li>Búsqueda en un campo específico: utilice el nombre del campo, dos puntos y, a continuación, su consulta, por ejemplo, <code>título:reserva</code>, <code>date:1911</code>, <code>subject:tree</code>. En esta colección puede utilizar {{ fields | join: ", " }}.</li>
                     <li>Wildcards: add <code>*</code> to match any character(s), e.g. <code>foo*</code>, <code>*oo</code>. Esto es útil para utilizar una raíz para encontrar palabras con todas las terminaciones relacionadas.</li>
                     <li>Fuzzy match: add <code>~</code> plus a number at the end of your query to specify a higher level of fuzziness in search, e.g. <code>foo~1</code>. Esto puede ayudar con los errores ortográficos.</li>
                     <li>Boost term: add <code>^</code> plus a number to boost the relevance of a term in your query, e.g. <code>foo^10</code>. Esto puede ayudar a reducir el desorden de resultados no relacionados si uno de sus términos es el más importante.</li>
