--- a/_includes/index/objects.html
+++ b/_includes/index/objects.html
@@ -1,8 +1,8 @@
- tabla{%- assign formats = site.data[site.metadata] | where_exp: 'item','item.parentid == nil' | map: "format" -%}
+{%- assign formats = site.data[site.metadata] | where_exp: 'item','item.parentid == nil' | map: "format" -%}
 {%- assign types = "image;audio;video;pdf;record;compound_object;multiple" | split: ";" -%}
 <div class="card mb-3" >
     <div class="card-body">
-        <h5 class="card-title">Documentos</h5>
+        <h5 class="card-title">Tabla de documentos</h5>
         <p class="card-text">
             {% for t in types %}
             {%- assign count = formats | where_exp: 'item','item contains t' | size -%}
